--- a/package.json
+++ b/package.json
@@ -22,6 +22,6 @@
     "@types/react": "^19.2.14",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.2.0",
-    "typescript": "^5.9.3"
+    "typescript": "5.9.3"
   }
 }
